Let user-select: all override parents' user-select: none

This has been broken since Chrome 62 where we landed
https://chromium-review.googlesource.com/570246.

Bug: 808430
Change-Id: I1c7626778e838b937e7220bd4702fb9eb94cef6a