third_party/WebKit/Source/core/input/EventHandler.h
@@ -417,7 +417,10 @@ class CORE_EXPORT EventHandler final
   FRIEND_TEST_ALL_PREFIXES(EventHandlerTest, ChildCanOverrideUserSelectNone);
   FRIEND_TEST_ALL_PREFIXES(EventHandlerTest,
                            ShadowChildCanOverrideUserSelectNone);
-  FRIEND_TEST_ALL_PREFIXES(EventHandlerTest, ChildCanOverrideUserSelectText);
+  FRIEND_TEST_ALL_PREFIXES(EventHandlerTest,
+                           UserSelectAllCanOverrideUserSelectNone);
+  FRIEND_TEST_ALL_PREFIXES(EventHandlerTest,
+                           UserSelectNoneCanOverrideUserSelectText);
   FRIEND_TEST_ALL_PREFIXES(EventHandlerTest,
                            ShadowChildCanOverrideUserSelectText);
   FRIEND_TEST_ALL_PREFIXES(EventHandlerTest, InputFieldsCanStartSelection);
